--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
         <p class="subtitle is-6">@johnsmith</p>
         <div class="contacts">
           <!-- m.mail@example.com -->
+          <a href="mailto:m.mail@example.com">dd</a>
           <!-- +12345678 -->
+          <a href="tel:+12345678">sa</a>
         </div>
       </div>
     </div>
